add support for queue_event_hook
