# lib/models/account.js
@@ -7,7 +7,9 @@ const {encrypt} = require('../utils/encrypt-decrypt');
 
 const retrieveSql = `SELECT * from accounts acc
 LEFT JOIN webhooks AS rh
-ON acc.registration_hook_sid = rh.webhook_sid`;
+ON acc.registration_hook_sid = rh.webhook_sid 
+LEFT JOIN webhooks AS qh
+ON acc.queue_event_hook_sid = qh.webhook_sid`;
 
 const insertPendingAccountSubscriptionSql = `INSERT account_subscriptions 
 (account_subscription_sid, account_sid, pending, stripe_subscription_id, 
@@ -55,12 +57,23 @@ AND pending = 0`;
 function transmogrifyResults(results) {
   return results.map((row) => {
     const obj = row.acc;
+
+    /* registration hook */
     if (row.rh && Object.keys(row.rh).length && row.rh.url !== null) {
       Object.assign(obj, {registration_hook: row.rh});
       delete obj.registration_hook.webhook_sid;
     }
     else obj.registration_hook = null;
     delete obj.registration_hook_sid;
+
+    /* queue event hook */
+    if (row.qh && Object.keys(row.qh).length && row.qh.url !== null) {
+      Object.assign(obj, {queue_event_hook: row.rh});
+      delete obj.queue_event_hook.webhook_sid;
+    }
+    else obj.queue_event_hook = null;
+    delete obj.queue_event_hook_sid;
+
     return obj;
   });
 }
@@ -246,6 +259,10 @@ Account.fields = [
   },
   {
     name: 'sip_realm',
+    type: 'string',
+  },
+  {
+    name: 'queue_event_hook_sid',
     type: 'string',
   },
   {
