# lib/routes/api/accounts.js
@@ -381,23 +381,52 @@ router.put('/:sid', async(req, res) => {
       }
     }
 
+    if (null !== obj.queue_event_hook) {
+      for (const prop of ['queue_event_hook']) {
+        if (prop in obj && Object.keys(obj[prop]).length) {
+          if ('webhook_sid' in obj[prop]) {
+            const sid = obj[prop]['webhook_sid'];
+            delete obj[prop]['webhook_sid'];
+            await Webhook.update(sid, obj[prop]);
+          }
+          else {
+            const sid = await Webhook.make(obj[prop]);
+            obj[`${prop}_sid`] = sid;
+          }
+        }
+        else {
+          obj[`${prop}_sid`] = null;
+        }
+        delete obj[prop];
+      }
+    }
+
     await validateUpdate(req, sid);
 
     if (Object.keys(obj).length) {
-      let orphanedHook;
+      let orphanedRegHook, orphanedQueueHook;
       if (null === obj.registration_hook) {
         const results = await Account.retrieve(sid);
-        if (results.length && results[0].registration_hook_sid) orphanedHook = results[0].registration_hook_sid;
+        if (results.length && results[0].registration_hook_sid) orphanedRegHook = results[0].registration_hook_sid;
         obj.registration_hook_sid = null;
         delete obj.registration_hook;
       }
-      logger.info({obj}, `about to update Account ${sid}`);
+      if (null === obj.queue_event_hook) {
+        const results = await Account.retrieve(sid);
+        if (results.length && results[0].queue_event_hook_sid) orphanedQueueHook = results[0].queue_event_hook_sid;
+        obj.queue_event_hook_sid = null;
+        delete obj.queue_event_hook;
+      }
+
       const rowsAffected = await Account.update(sid, obj);
       if (rowsAffected === 0) {
         return res.status(404).end();
       }
-      if (orphanedHook) {
-        await Webhook.remove(orphanedHook);
+      if (orphanedRegHook) {
+        await Webhook.remove(orphanedRegHook);
+      }
+      if (orphanedQueueHook) {
+        await Webhook.remove(orphanedQueueHook);
       }
     }
 
